--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "swiper": "^9.2.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
