--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.12.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
