--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "dompurify": "^3.0.2",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
+    "es6-shim": "^0.35.8",
+    "express": "^4.18.2",
     "framer-motion": "^10.12.2",
+    "jsonwebtoken": "^9.0.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-draft-wysiwyg-a": "^1.14.5-1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
