--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.12.2",
     "jsonwebtoken": "^9.0.0",
+    "node-modules": "^1.0.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
