--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "swiper": "^9.2.2",
     "universal-cookie": "^4.0.4",
@@ -48,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.2"
   }
 }
